Extracted common code from notifyVerticesDelete and others
I created a new header file, lib/NIF/NifUtil.h, with five functions,
three new and two moved from lib/NIF/utils/Object3d.h:
	ApplyMapToTriangles
	CalcMaxTriangleIndex
	EraseVectorIndices
	GenerateIndexCollapseMap
	GenerateTrianglesFromStrips
While the code of these functions already existed, I tweaked it quite
a bit for efficiency and versatility.  Most are template functions.

I updated the following functions to use the five new functions,
generally decreasing the code size and complexity:
	NiGeometryData::notifyVerticesDelete
	BSTriShape::notifyVerticesDelete
	BSDynamicTriShape::notifyVerticesDelete
	NiTriShapeData::notifyVerticesDelete
	NiTriStripsData::notifyVerticesDelete
	NiTriStripsData::StripsToTris
	NiLinesData::notifyVerticesDelete
	NiSkinData::notifyVerticesDelete
	NiSkinPartition::notifyVerticesDelete
	NiSkinPartition::RemoveEmptyPartitions
	NiSkinPartition::PartitionBlock::ConvertStripsToTriangles

Generally, these functions should work exactly the
same as before, though perhaps slightly more efficiently.
NiTriStripsData::notifyVerticesDelete was already broken; I didn't fix
it, but I did tweak it a little.  I added code to RemoveEmptyPartitions
so triParts, if it exists, would not be discarded.

Testing:

I could find no example files with strips, so those three functions
are untested.

I could find no example files with BSDynamicTriShape or NiLinesData,
so those two functions are untested.  The changes to them were simple
enough that I think it's unlikely I made a mistake.

For the rest, I used Skyrim SE CBBE Body and Skyrim vanilla female body:

SSE: Tested BSTriShape by deleting vertices and verifying the result
looked right.  Tested RemoveEmptyPartitions by moving all triangles in
one partition to another (by painting), hitting "Apply", and verifying
that the empty partition was deleted.

Skryim: Tested NiTriShape, NiTriShapeData, and NiGeometryData by deleting
vertices and verifying the r

--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -814,6 +814,9 @@
     <ClInclude Include="lib\NIF\NifFile.h">
       <Filter>Libraries\NIF</Filter>
     </ClInclude>
+    <ClInclude Include="lib\NIF\NifUtil.h">
+      <Filter>Libraries\NIF</Filter>
+    </ClInclude>
     <ClInclude Include="lib\NIF\utils\Miniball.hpp">
       <Filter>Libraries\NIF\Utilities</Filter>
     </ClInclude>
