--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -740,6 +740,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\components\Anim.h" />
     <ClInclude Include="src\components\Automorph.h" />
+    <ClInclude Include="src\components\BuildSelection.h" />
     <ClInclude Include="src\components\DiffData.h" />
     <ClInclude Include="src\components\Mesh.h" />
     <ClInclude Include="src\components\NormalGenLayers.h" />
@@ -802,6 +803,7 @@
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp" />
     <ClCompile Include="src\components\Anim.cpp" />
     <ClCompile Include="src\components\Automorph.cpp" />
+    <ClCompile Include="src\components\BuildSelection.cpp" />
     <ClCompile Include="src\components\DiffData.cpp" />
     <ClCompile Include="src\components\Mesh.cpp" />
     <ClCompile Include="src\components\NormalGenLayers.cpp" />
