--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -1777,6 +1777,9 @@
     <ClInclude Include="lib\LZ4F\lz4frame_static.h">
       <Filter>Libraries\LZ4F</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\BuildSelection.h">
+      <Filter>Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1958,6 +1961,9 @@
     </ClCompile>
     <ClCompile Include="lib\LZ4F\lz4hc.c">
       <Filter>Libraries\LZ4F</Filter>
+    </ClCompile>
+    <ClCompile Include="src\components\BuildSelection.cpp">
+      <Filter>Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
