Save named poses to UI and XML files #345

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(commonsources
 	)
 set(OSsources
 	${commonsources}
+	src/components/PoseData.cpp
 	src/components/RefTemplates.cpp
 	src/components/TweakBrush.cpp
 	src/components/UndoHistory.cpp
