--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1744,6 +1744,9 @@
     <ClInclude Include="src\components\RefTemplates.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\PoseData.h">
+      <Filter>Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1940,6 +1943,9 @@
     </ClCompile>
     <ClCompile Include="lib\nifly\src\Skin.cpp">
       <Filter>Libraries\nifly\src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\components\PoseData.cpp">
+      <Filter>Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
