Redesign brush settings as a popup
Brush settings panel is gone. Brush settings are now opened as a popup (same shortcut, space key).

--- a/OutfitStudio.vcxproj
+++ b/OutfitStudio.vcxproj
@@ -759,6 +759,7 @@
     <ClInclude Include="src\render\GLOffscreenBuffer.h" />
     <ClInclude Include="src\render\GLShader.h" />
     <ClInclude Include="src\render\GLSurface.h" />
+    <ClInclude Include="src\ui\wxBrushSettingsPopup.h" />
     <ClInclude Include="src\ui\wxStateButton.h" />
     <ClInclude Include="src\utils\AABBTree.h" />
     <ClInclude Include="src\utils\ConfigurationManager.h" />
@@ -827,6 +828,7 @@
     <ClCompile Include="src\render\GLOffscreenBuffer.cpp" />
     <ClCompile Include="src\render\GLShader.cpp" />
     <ClCompile Include="src\render\GLSurface.cpp" />
+    <ClCompile Include="src\ui\wxBrushSettingsPopup.cpp" />
     <ClCompile Include="src\ui\wxStateButton.cpp" />
     <ClCompile Include="src\utils\AABBTree.cpp" />
     <ClCompile Include="src\utils\ConfigurationManager.cpp" />
