--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1747,6 +1747,9 @@
     <ClInclude Include="src\components\PoseData.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="src\ui\wxBrushSettingsPopup.h">
+      <Filter>UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1946,6 +1949,9 @@
     </ClCompile>
     <ClCompile Include="src\components\PoseData.cpp">
       <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\wxBrushSettingsPopup.cpp">
+      <Filter>UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
