Refactor SliderDisplay class into wxSliderPanel (wxPanel)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ set(commonsources
 	src/render/GLShader.cpp
 	src/render/GLSurface.cpp
 	src/ui/wxStateButton.cpp
+	src/ui/wxSliderPanel.cpp
 	src/utils/AABBTree.cpp
 	src/utils/ConfigurationManager.cpp
 	src/utils/Log.cpp
