--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1750,6 +1750,9 @@
     <ClInclude Include="src\ui\wxBrushSettingsPopup.h">
       <Filter>UI</Filter>
     </ClInclude>
+    <ClInclude Include="src\ui\wxSliderPanel.h">
+      <Filter>UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1951,6 +1954,9 @@
       <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="src\ui\wxBrushSettingsPopup.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\wxSliderPanel.cpp">
       <Filter>UI</Filter>
     </ClCompile>
   </ItemGroup>
