--- a/OutfitStudio.vcxproj
+++ b/OutfitStudio.vcxproj
@@ -391,6 +391,7 @@
     <None Include="lib\gli\glm\gtx\wrap.inl" />
     <None Include="res\xrc\About.xrc" />
     <None Include="res\xrc\Actions.xrc" />
+    <None Include="res\xrc\ConvertBodyReference.xrc" />
     <None Include="res\xrc\OutfitStudio.xrc" />
     <None Include="res\xrc\Project.xrc" />
     <None Include="res\xrc\SavePreset.xrc" />
@@ -748,6 +749,7 @@
     <ClInclude Include="src\files\ObjFile.h" />
     <ClInclude Include="src\files\ResourceLoader.h" />
     <ClInclude Include="src\files\TriFile.h" />
+    <ClInclude Include="src\program\ConvertBodyReferenceDialog.h" />
     <ClInclude Include="src\program\EditUV.h" />
     <ClInclude Include="src\program\FBXImportDialog.h" />
     <ClInclude Include="src\program\FBXImportOptions.h" />
@@ -820,6 +822,7 @@
     <ClCompile Include="src\files\ObjFile.cpp" />
     <ClCompile Include="src\files\ResourceLoader.cpp" />
     <ClCompile Include="src\files\TriFile.cpp" />
+    <ClCompile Include="src\program\ConvertBodyReferenceDialog.cpp" />
     <ClCompile Include="src\program\EditUV.cpp" />
     <ClCompile Include="src\program\FBXImportDialog.cpp" />
     <ClCompile Include="src\program\GroupManager.cpp" />
