--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1762,6 +1762,7 @@
     <ClInclude Include="src\utils\ConfigDialogUtil.h">
       <Filter>Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="src\program\SliderDataImportDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1971,10 +1972,12 @@
     <ClCompile Include="src\program\ConvertBodyReferenceDialog.cpp">
       <Filter>Program</Filter>
     </ClCompile>
+    <ClCompile Include="src\program\SliderDataImportDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Config.xml">
       <Filter>Resources</Filter>
     </Xml>
+    <Xml Include="res\xrc\SliderDataImport.xrc" />
   </ItemGroup>
 </Project>
