OSD/TRI import settings dialog (#409)
Co-authored-by: ousnius <ousnius@users.noreply.github.com>

--- a/OutfitStudio.vcxproj.filters
+++ b/OutfitStudio.vcxproj.filters
@@ -1762,6 +1762,9 @@
     <ClInclude Include="src\utils\ConfigDialogUtil.h">
       <Filter>Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="src\program\SliderDataImportDialog.h">
+      <Filter>Program</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1971,9 +1974,15 @@
     <ClCompile Include="src\program\ConvertBodyReferenceDialog.cpp">
       <Filter>Program</Filter>
     </ClCompile>
+    <ClCompile Include="src\program\SliderDataImportDialog.cpp">
+      <Filter>Program</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Config.xml">
+      <Filter>Resources</Filter>
+    </Xml>
+    <Xml Include="res\xrc\SliderDataImport.xrc">
       <Filter>Resources</Filter>
     </Xml>
   </ItemGroup>
