--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -760,57 +760,6 @@
     <ClInclude Include="src\components\NormalGenLayers.h">
       <Filter>Components</Filter>
     </ClInclude>
-    <ClInclude Include="lib\SOIL2\jo_jpeg.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\pkm_helper.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\pvr_helper.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\SOIL2.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stb_image.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stb_image_write.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_DDS.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_DDS_c.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_ext.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_ext_c.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_pkm.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_pkm_c.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_pvr.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\stbi_pvr_c.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\etc1_utils.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\image_DXT.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
-    <ClInclude Include="lib\SOIL2\image_helper.h">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClInclude>
     <ClInclude Include="src\utils\PlatformUtil.h">
       <Filter>Utilities</Filter>
     </ClInclude>
@@ -1726,6 +1675,57 @@
     <ClInclude Include="src\components\UndoState.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="lib\SOIL2\image_DXT.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\image_helper.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\jo_jpeg.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\pkm_helper.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\pvr_helper.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\SOIL2.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stb_image.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stb_image_write.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_DDS.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_DDS_c.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_ext.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_ext_c.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_pkm.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_pkm_c.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_pvr.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\stbi_pvr_c.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
+    <ClInclude Include="lib\SOIL2\wfETC.h">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1836,18 +1836,6 @@
     <ClCompile Include="src\components\NormalGenLayers.cpp">
       <Filter>Components</Filter>
     </ClCompile>
-    <ClCompile Include="lib\SOIL2\SOIL2.c">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClCompile>
-    <ClCompile Include="lib\SOIL2\etc1_utils.c">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClCompile>
-    <ClCompile Include="lib\SOIL2\image_DXT.c">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClCompile>
-    <ClCompile Include="lib\SOIL2\image_helper.c">
-      <Filter>Libraries\SOIL2</Filter>
-    </ClCompile>
     <ClCompile Include="src\utils\PlatformUtil.cpp">
       <Filter>Utilities</Filter>
     </ClCompile>
@@ -1910,6 +1898,18 @@
     </ClCompile>
     <ClCompile Include="lib\nifly\src\Skin.cpp">
       <Filter>Libraries\nifly\src</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\SOIL2\image_DXT.c">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\SOIL2\image_helper.c">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\SOIL2\SOIL2.c">
+      <Filter>Libraries\SOIL2</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\SOIL2\wfETC.c">
+      <Filter>Libraries\SOIL2</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
